--- a/ear_solter/.settings/org.eclipse.wst.common.component
+++ b/ear_solter/.settings/org.eclipse.wst.common.component
@@ -3,20 +3,59 @@
 <wb-module deploy-name="ear_solter-0.0.1-SNAPSHOT">
 <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
 <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
-<dependent-module archiveName="web_solter-0.0.1-SNAPSHOT.war" deploy-path="/" handle="module:/resource/web_solter/web_solter">
-<dependency-type>uses</dependency-type>
-</dependent-module>
-<dependent-module archiveName="pojo_api_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/pojo_api_solter/pojo_api_solter">
-<dependency-type>uses</dependency-type>
-</dependent-module>
-<dependent-module archiveName="pojo_impl_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/pojo_impl_solter/pojo_impl_solter">
-<dependency-type>uses</dependency-type>
-</dependent-module>
-<dependent-module archiveName="dao_api_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/dao_api_solter/dao_api_solter">
-<dependency-type>uses</dependency-type>
-</dependent-module>
-<dependent-module archiveName="dao_impl_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/dao_impl_solter/dao_impl_solter">
-<dependency-type>uses</dependency-type>
-</dependent-module>
+        <dependent-module archiveName="web_solter-0.0.1-SNAPSHOT.war" deploy-path="/" handle="module:/resource/web_solter/web_solter">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="pojo_api_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/pojo_api_solter/pojo_api_solter">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="pojo_impl_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/pojo_impl_solter/pojo_impl_solter">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dao_api_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/dao_api_solter/dao_api_solter">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dao_impl_solter-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/dao_impl_solter/dao_impl_solter">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="spring-2.5.6.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/org/springframework/spring/2.5.6/spring-2.5.6.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="cglib-2.2.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/cglib/cglib/2.2/cglib-2.2.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="asm-3.1.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/asm/asm/3.1/asm-3.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="mysql-connector-java-5.1.9.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/mysql/mysql-connector-java/5.1.9/mysql-connector-java-5.1.9.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="hibernate-3.2.6.ga.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/org/hibernate/hibernate/3.2.6.ga/hibernate-3.2.6.ga.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="ehcache-1.2.3.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/net/sf/ehcache/ehcache/1.2.3/ehcache-1.2.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="asm-attrs-1.5.3.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/asm/asm-attrs/1.5.3/asm-attrs-1.5.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="geronimo-spec-jta-1.0-M1.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/geronimo-spec/geronimo-spec-jta/1.0-M1/geronimo-spec-jta-1.0-M1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="dom4j-1.6.1.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/dom4j/dom4j/1.6.1/dom4j-1.6.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="xml-apis-1.0.b2.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/xml-apis/xml-apis/1.0.b2/xml-apis-1.0.b2.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-logging-1.1.1.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="commons-collections-3.2.1.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/commons-collections/commons-collections/3.2.1/commons-collections-3.2.1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="antlr-2.7.7.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/antlr/antlr/2.7.7/antlr-2.7.7.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
 </wb-module>
 </project-modules>
